--- a/.github/workflows/rss.yml
+++ b/.github/workflows/rss.yml
@@ -1,21 +1,31 @@
-name: Generate RSS Feed
+name: Generate RSS Feed (Playwright)
 
 on:
   schedule:
-    - cron: '0 * * * *'  # 毎時実行
+    - cron: '0 * * * *'  # 毎時
   workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v3
+
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.x'
-      - run: pip install beautifulsoup4 requests
-      - run: python generate_rss.py
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install playwright
+          playwright install chromium
+
+      - name: Generate RSS
+        run: python generate_rss_playwright.py
+
       - name: Commit and push RSS
         run: |
           git config --global user.name 'github-actions'
