--- a/.github/workflows/rss.yml
+++ b/.github/workflows/rss.yml
@@ -2,8 +2,8 @@ name: Generate RSS Feed with Playwright
 
 on:
   schedule:
-    - cron: '0 * * * *'  # 毎時
-  workflow_dispatch:
+    - cron: '0 * * * *'  # 毎時実行（必要に応じて調整）
+  workflow_dispatch:      # 手動実行も可能
 
 jobs:
   build:
@@ -18,13 +18,13 @@ jobs:
         with:
           python-version: '3.x'
 
-      - name: Install dependencies
+      - name: Install dependencies (playwright + bs4)
         run: |
           python -m pip install --upgrade pip
           pip install playwright beautifulsoup4
           playwright install chromium
 
-      - name: Generate RSS
+      - name: Generate RSS feed
         run: python generate_rss.py
 
       - name: Commit and push updated RSS
@@ -32,5 +32,5 @@ jobs:
           git config --global user.name 'github-actions'
           git config --global user.email 'github-actions@github.com'
           git add rss.xml
-          git commit -m "Update RSS feed" || echo "No changes"
+          git commit -m "Update RSS feed" || echo "No changes to commit"
           git push
